# jinx

./: .gitignore  Cargo.toml  PRIVACY.md  README.md  TERMS.md  TODO.md  backup-db.sh  backup-jinx.sh  build.rs  deny.toml  install.sh  run.sh
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  publish.yml
.sqlx/: query-0046e959adab103ccbd85eed2db4b9b679ac810bd6fb9f7b47760a6c03cb5f58.json  query-0052513bd96bb4f9b3c87ffcc969305b6deb8215742a2c3476cc9c9d415f1734.json  query-00af67a95f1705bc9b021c9572e2afce2cc8607c638760375cbeca8d83da45e0.json  query-0109f185ac59b7a1641e3d8edfbf1809b5c95c081e191ef0587bdd5a4db956b2.json  query-016d9a15e1c610477d5444970de7129d76e32bd05c33ecd82c04ab91b331173e.json  query-01931fdc53c73ae49503d2a1ecaeac57b9ad81739cf890530a9a8bd0a5d88e3c.json  query-0712fd5722b21f760aded966b077c5dca8294fa6d40097838a035fd7009bd77a.json  query-0912d6e9db8a4ddac857cd96f0adafb6be34df09e0535b097011ab23fe76cb2c.json  query-0d629a25a7ca86aee1ea52f64509ddd7207f6faec941143e69c3121b06f7cea3.json  query-0f52c96a6743655ccc0f0aeab5cef683cf09b88d61ca40a8a1325d461f4b9199.json  query-104e1c52808412944d18758fbaf418a89c4cd3b6d555ec6f296a73e46d89c3e7.json  query-109e78cd91fa9259fdeb68eb11867cc1564f5fb397655ff0d5ac1637c2930e34.json  query-14a2cdc49ed9b5a752b76acaca2576f77be1e74147b3d87ceee7aee47755cdc6.json  query-1606225651db0cfd73360ccfac5af9626a46c5bcff3b1ad6e292b57935129646.json  query-164318cc74db77fb613ad7f2b724baef30dcac3728cba34dcdceb3562aafacf5.json  query-1659dc987ac0822b829c342e35ea30b57523ba5e7b66284757ec83c3865c3c06.json  query-1955d5e57d5bc35251d512a4ea2f8e3762d88d2747ab3ecbe9dd9bcd8267b285.json  query-19df212711e7da25f114d4ebdc3ff9476f5b69553b80c764e237a4f6b77e27b6.json  query-1bb1af6dacfb1f650a81c01158ce50f13a32efb1df465d2e8b5fab5b2606fb48.json  query-1c42fe0d6ac5c0fc999b3732e37e10009f2198da8f7564e7ad01014f6b35adfe.json  query-1ce26247db2fc21c4bb6d72c8ee229458857481e56be6b98c87bed91f6d7353c.json  query-1d31257d2aba91d03f0614583fa45fe9e22eb1313874a9036d839ee4030da4be.json  query-1e00676fdbfc4737113457f244e69dab70632bf69b43e374714a65f9af31af05.json  query-1e5e36439495b7b04dc647b8463e7e11a8ae6924690548c228f3bb9e344eeb54.json  query-1faea66e514f26399c8bccfc0091995b3fb832b266c9588909b34c05b5c3d120.json  query-20656a14f782a7f60cd9450dae1b3b5c2140633eeab42d74273d898aef6d8a48.json  query-23c04843b00ce68fcf9f0f8d74f660ba1ee5fe500298e929580215bac65457ea.json  query-23d248ee6380b894d153acd06c35b6edbe0467e5dfe2aa17d114a82b53888ce9.json  query-240e8cb6d9d5a7bfdbfda8fc35f917a15947fe954db51c87ae99e32cf4b5fffc.json  query-28ba00858ad3226e68c84cee9866a3df39cf02bacf25f401914c4c0d121f7f00.json  query-29301dd928b9966d8de7214b9c09e664293dd07f917a034d52d17fbed3eaee70.json  query-2c8ded0c37e409168017bc7cd7f612cccc0bb45a948730202fe5e0909dd8d254.json  query-2dae87c8f39d5d5be3ffbfd0af2c5c7f48747536067c17368a67e1f54f8003e7.json  query-2f3c21b218e516958f8f2c479983228aaa04f44477462f9b71c51222ec7ef266.json  query-2f5af94fe21b3e76d1fa4d100ad8f58b985f4540c4c738e59a11d767155e4498.json  query-3384f95675985e68c6b270c6c4e95aec7a04f8a93bfb5bda7d34d15ba3fde7bd.json  query-33889fd8bf7e3173fe27593e2467ab092107af813524617bec99a8da28da563e.json  query-338fe12a8747185377245d1ca77d3c6b1f36378ff42591ccdc623ea112884d0f.json  query-35a6a34ba6802ef4930c089556a964bb920616a91dee45d8d29c321c158632f0.json  query-372739f8e934eb10166b619ef48cfdcd9d606628aef3784c07e8c833c5931cb2.json  (+150 more)
docs/: MAINTENANCE.md  TODO.md  command-reference.md  faq.md  permissions-used.md  self-hosting.md  troubleshooting.md
src/: cli_args.rs  db.rs  error.rs  license.rs  main.rs  signal.rs  time.rs
src/bot/: cache.rs  commands.rs  error_handler.rs  event_handler.rs  mod.rs  util.rs
src/bot/commands/: global_commands.rs  guild_commands.rs  mod.rs  owner_commands.rs  util.rs
src/db/: mod.rs  schema_v1.rs  schema_v2.rs
src/http/: mod.rs  update_checker.rs
src/http/jinxxy/: dto.rs  error.rs  mod.rs
tests/: db.rs
