[package]
name = "jinx"
version = "0.8.0"
edition = "2024"
authors = ["Michael Ripley <zkxs00@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/zkxs/jinx"
description = "Discord bot that handles Jinxxy license registration"
keywords = ["jinxxy", "discord", "bot", "license", "activation"]
rust-version = "1.85.0"

[profile.release-optimized-debug]
inherits = "release"
strip = false # required for `cargo-bloat`
debug = true # required for `cargo flamegraph`, and makes `cargo-bloat` output significantly better

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "time"] } # Async runtime
tokio-graceful-shutdown = "0.16" # Handles SIGINT/SIGTERM/Ctrl+C
poise = { git = "https://github.com/zkxs/poise.git", branch = "current", features = ["unstable"] } # Discord bot library. Forked from https://github.com/serenity-rs/poise 0.6.1
reqwest = { version = "0.11", default-features = false, features = ["gzip", "json", "rustls-tls"] } # HTTP; 0.12 exists but intentionally kept back to 0.11 to reduce duplicate dependencies because old version is used by poise
serde = "1" # Serialization
tokio-rusqlite = { version = "0.6", features = ["bundled"] } # Persistence
rusqlite = { version = "0.32", features = ["bundled"] } # Persistence, needed because of missing re-exports in tokio-rusqlite, intentionally held back so that versions match.
tracing = "0.1" # Logging API
tracing-subscriber = { version = "0.3", features = ["env-filter"] } # Logger implementation
regex = "1" # Pattern matching
rand = { version = "0.9", default-features = false, features = ["std", "std_rng", "os_rng"] } # RNG
papaya = "0.2" # concurrent map
ahash = "0.8" # faster hashing algorithm than std
percent-encoding = "2" # URL encoding
semver = "1" # Semver parsing (for update check)
clap = { version = "4", features = ["derive"] } # command-line arg parsing
trie-rs = "0.4"

[dev-dependencies]
tracing-test = "0.2" # Allow tracing to print during unit tests

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unused_async = "warn"
unused_self = "warn"
unwrap_used = "warn"
used_underscore_binding = "warn"
used_underscore_items = "warn"
