[package]
name = "jinx"
version = "1.0.0"
edition = "2024"
authors = ["Michael Ripley <zkxs00@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/zkxs/jinx"
description = "Discord bot that handles Jinxxy license registration"
keywords = ["jinxxy", "discord", "bot", "license", "activation"]

[profile.release-optimized-debug]
inherits = "release"
strip = false # required for `cargo-bloat`
debug = true # required for `cargo flamegraph`, and makes `cargo-bloat` output significantly better

[profile.dev.package.sqlx-macros]
opt-level = 3 # unoptimized sqlx macros can really slow down builds

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "time", "signal"] } # Async runtime
poise = { git = "https://github.com/zkxs/poise.git", branch = "zkxs-next-2", default-features = false, features = ["cache", "handle_panics"] } # Discord bot library. Forked from https://github.com/serenity-rs/poise 0.6.1 + unreleased `serenity-next` branch + my two PRs applied
serenity = { git = "https://github.com/serenity-rs/serenity.git", branch = "next", default-features = false, features = ["rustls_backend"] } # Required because `default-features = false` is broken on poise
reqwest = { version = "0.12", default-features = false, features = ["gzip", "brotli", "deflate", "zstd", "json", "http2", "rustls-tls"] } # HTTP client
serde = "1" # Serialization
serde_json = "1" # Serialization
sqlx = { git = "https://github.com/zkxs/sqlx.git", default-features = false, features = ["macros", "sqlite", "runtime-tokio"] } # Persistence
tracing = "0.1" # Logging API
tracing-subscriber = { version = "0.3", features = ["env-filter"] } # Logger implementation
regex = "1" # Pattern matching
rand = { version = "0.9", default-features = false, features = ["std", "std_rng", "os_rng"] } # RNG
papaya = "0.2" # concurrent map
ahash = "0.8" # faster hashing algorithm than std
percent-encoding = "2" # URL encoding
semver = "1" # Semver parsing (for update check)
clap = { version = "4", features = ["derive"] } # command-line arg parsing
trie-rs = "0.4" # autocompletion
bytes = "1" # HTTP body handling
jiff = { version = "0.2", features = ["serde"] } # Timestamps
lexical-core = { version = "1", default-features = false, features = ["write-integers"] } # write ints as text

[dev-dependencies]
tracing-test = "0.2" # Allow tracing to print during unit tests

[lints.rust]
unsafe_code = "forbid"
unsafe_attr_outside_unsafe = "forbid"
closure_returning_async_block = "warn"

[lints.clippy]
dbg_macro = "warn"
todo = "warn"
unused_async = "warn"
unused_self = "warn"
unwrap_used = "deny"
used_underscore_binding = "warn"
used_underscore_items = "warn"
string_slice = "deny"
print_stdout = "warn"
print_stderr = "warn"
cast_possible_truncation = "warn"
cast_precision_loss = "warn"
fn_to_numeric_cast_any = "warn"
ptr_as_ptr = "warn"
integer_division = "warn"
undocumented_unsafe_blocks = "deny"
